--- a/Index.css
+++ b/Index.css
@@ -20,6 +20,8 @@
 body {
     background-color: var(--color2);
     font-family: var(--font1);
+    display: grid;
+    grid-template-columns: 250px 1fr;
 }
 
 a {
@@ -73,5 +75,4 @@ nav a:hover {
 
 nav a svg:hover {
     fill: var(--color4);
-    color
 }
