--- a/Index.css
+++ b/Index.css
@@ -7,7 +7,7 @@
     --font4: 'Tangerine', cursive;
     --color1: #111827;
     --color2: #374151; 
-    --color3: #9ca3af; 
+    --color3: #d1d5db; 
     --color4: #f9fafb;
 }
 
@@ -23,6 +23,7 @@ body {
     font-family: var(--font1);
     display: grid;
     grid-template-columns: 250px 1fr;
+    
 }
 
 a {
@@ -34,8 +35,8 @@ li {
 }
 
 svg {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     display: block;
     fill: var(--color3);
 }
@@ -57,36 +58,87 @@ nav #logo {
 
 nav a {
     display: flex;
-    padding: 5px 0px; 
+    padding: 10px 0px; 
     align-items: center;
     color: var(--color3);    
 }
 
 nav > div:first-child a{
     font-size: 1.5rem;
+    padding: 0;
 }
 
 nav a span {
     margin-right: 10px;
 }
 
-nav a:hover {
+nav a:hover, nav a svg:hover {
     color: var(--color4);
-}
-
-nav a svg:hover {
     fill: var(--color4);
 }
 
-header div {
-    border: 1px solid var(--color3);
+.header-container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 40px 0 40px;
+    background-color: var(--color1);
+}
+
+.header-container div {
+    padding: 10px;
+    display: flex;
+}
+
+.header-container ul {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.header-container:first-child > div:first-child {
+    gap: 10px;
     align-items: center;
 }
 
-header div:first-child ul {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-left: auto;
+.header-container:first-child > div:first-child input {
+    width: 500px;
+    height: 30px;
+    padding: 10px 15px;
+    background-color: var(--color2);
+    border: none;
+    border-radius: 50px;
+    color: var(--color3);
+    font-family: var(--font1);
+}
+
+.header-container:first-child img {
+    width: 30px;
+    height: 30px;
+    display: block;
+    border-radius: 50%;
+}
+
+.header-container:nth-child(2) img {
+    width: 50px;
+    height: 50px;
+    display: block;
+    border-radius: 50%;
+}
+
+.header-container:nth-child(2) button {
+    width: 100px;
+    padding: 8px 13px;
+    background-color: var(--color2);
+    border: none;
+    border-radius: 50px;
+    color: var(--color3);
+    font-family: var(--font1);
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.header-container:nth-child(2) button:hover {
+    background-color: var(--color4);
+    color: var(--color1);
+    cursor: pointer;
 }
