Added project details

--- a/Index.css
+++ b/Index.css
@@ -162,3 +162,20 @@ nav a:hover, nav a svg:hover {
     border-radius: 10px;
     width: 300px;
 }
+
+.additional-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+}
+.additional-container > div {
+    padding: 20px;
+}
+
+.additional-container > div > div {
+    padding: 20px;
+    background-color: var(--color1);
+    border-radius: 10px;
+    width: 300px;
+}
+
