--- a/Index.css
+++ b/Index.css
@@ -105,7 +105,7 @@ nav a:hover, nav a svg:hover {
     align-items: center;
 }
 
-.header-container:first-child > div:first-child input {
+.header-container input {
     width: 500px;
     height: 30px;
     padding: 10px 15px;
@@ -114,6 +114,11 @@ nav a:hover, nav a svg:hover {
     border-radius: 50px;
     color: var(--color3);
     font-family: var(--font1);
+}
+
+.header-container input:focus {
+    border: 0;
+
 }
 
 .header-container:first-child img {
