--- a/Index.css
+++ b/Index.css
@@ -5,21 +5,22 @@
     --font2: 'Playwrite GB S', sans-serif;
     --font3: 'Manrope', sans-serif;
     --font4: 'Tangerine', cursive;
-    --color1: #111827;
-    --color2: #374151; 
-    --color3: #d1d5db; 
-    --color4: #f9fafb;
+    --color1: #082f49;
+    --color2: #0284c7; 
+    --color3: #7dd3fc; 
+    --color4: #e5e7eb;
+    --color5: #fff;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: var(--color3);
+    color: var(--color4);
 }
 
 body {
-    background-color: var(--color2);
+    background-color: var(--color4);
     font-family: var(--font1);
     display: grid;
     grid-template-columns: 250px 1fr;
@@ -38,17 +39,17 @@ svg {
     width: 20px;
     height: 20px;
     display: block;
-    fill: var(--color3);
+    fill: var(--color4);
 }
 
 svg:hover {
-    fill: var(--color4);
+    fill: var(--color2);
 }
 
 nav {
     width: 250px;
     height: 100vh;
-    background-color: var(--color1);
+    background-color: var(--color2);
 }
 
 nav > div {
@@ -64,12 +65,14 @@ nav a {
     display: flex;
     padding: 10px 0px; 
     align-items: center;
-    color: var(--color3);    
+    color: var(--color4);
+    font-weight: 600;    
 }
 
 nav > div:first-child a{
     font-size: 1.5rem;
-    padding: 0;;
+    font-weight: bold;
+    padding: 0;
 }
 
 nav a span {
@@ -77,27 +80,42 @@ nav a span {
 }
 
 nav a:hover, nav a svg:hover {
-    color: var(--color4);
-    fill: var(--color4);
+    color: var(--color3);
+    fill: var(--color3);
+}
+
+.header {
+    box-shadow: 0 0 5px 0 var(--color3);
+    background-color: #fff;
 }
 
 .header-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 10px 40px 0 40px;
-    background-color: var(--color1);
+    background-color: var(--color4);
 }
 
 .header-container div {
     padding: 10px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .header-container ul {
     display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.header-container a {
+    color: var(--color1);
+}
+
+.header-container svg {
+    fill: var(--color1);
 }
 
 .header-container:first-child > div:first-child {
@@ -109,10 +127,9 @@ nav a:hover, nav a svg:hover {
     width: 500px;
     height: 30px;
     padding: 10px 15px;
-    background-color: var(--color2);
-    border: none;
+    border: 2px solid var(--color2);
     border-radius: 50px;
-    color: var(--color3);
+    color: var(--color1);
     font-family: var(--font1);
 }
 
@@ -135,19 +152,23 @@ nav a:hover, nav a svg:hover {
     border-radius: 50%;
 }
 
+.header-container:nth-child(2) a {
+    color: var(--color1);
+}
+
 .header-container:nth-child(2) button {
     width: 100px;
     padding: 8px 13px;
     background-color: var(--color2);
     border: none;
     border-radius: 50px;
-    color: var(--color3);
+    color: var(--color4);
     font-family: var(--font1);
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .header-container:nth-child(2) button:hover {
-    background-color: var(--color4);
+    background-color: var(--color3);
     color: var(--color1);
     cursor: pointer;
 }
@@ -155,22 +176,26 @@ nav a:hover, nav a svg:hover {
 .main-container {
     margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
 }
 
 .main-container h2 {
-    font-size: 15pt;
+    color: var(--color1);
+    font-size: 12pt;
     font-weight: 600;
 }
 
 .main-container h3 {
-    font-size: 12pt;
+    color: var(--color1);
+    font-size: 10pt;
     font-weight: 600;
     margin-bottom: 5px;
 }
 
 .main-container p {
+    color: var(--color1);
     font-size: 10pt;
+    line-height: 1.25;
 }
 
 .main-container > div:first-child h2 {
@@ -179,22 +204,23 @@ nav a:hover, nav a svg:hover {
 
 .project-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     padding: 10px 20px;
 }
 
 .project {
-    background-color: var(--color1);
+    background-color: var(--color5);
     padding: 20px;
     border-radius: 10px;
-    width: 300px;
+    width: 340px;
 }
 
 .project-cta {
     display: flex;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: auto;
+    padding-top: 30px;
     justify-content: right;
 }
 
@@ -210,7 +236,7 @@ nav a:hover, nav a svg:hover {
 
 
 .additional-container > div:first-child > div {
-    background-color: var(--color1);
+    background-color: var(--color5);
     padding: 20px;
     border-radius: 10px;
     width: 250px;
@@ -231,7 +257,7 @@ nav a:hover, nav a svg:hover {
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
     margin-bottom: 20px;
-    background-color: var(--color1);
+    background-color: var(--color5);
     padding: 20px;
     border-radius: 10px;
     width: 250px;
