--- a/Index.css
+++ b/Index.css
@@ -5,11 +5,10 @@
     --font2: 'Playwrite GB S', sans-serif;
     --font3: 'Manrope', sans-serif;
     --font4: 'Tangerine', cursive;
-    --color1: #082f49;
+    --color1: #111827;
     --color2: #0284c7; 
-    --color3: #7dd3fc; 
     --color4: #e5e7eb;
-    --color5: #fff;
+    --color5: #f9fafb;
 }
 
 * {
@@ -47,6 +46,10 @@ svg:hover {
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
     width: 250px;
     height: 100vh;
     background-color: var(--color2);
@@ -65,7 +68,7 @@ nav a {
     display: flex;
     padding: 10px 0px; 
     align-items: center;
-    color: var(--color4);
+    color: var(--color5);
     font-weight: 600;    
 }
 
@@ -80,22 +83,23 @@ nav a span {
 }
 
 nav a:hover, nav a svg:hover {
-    color: var(--color3);
-    fill: var(--color3);
+    color: var(--color4);
+    fill: var(--color4);
 }
 
-.header {
-    box-shadow: 0 0 5px 0 var(--color3);
-    background-color: #fff;
+.main {
+    margin-left: 250px;
+    width: 100%;
 }
 
 .header-container {
+    background-color: #fff;
+    width: calc(100vw - 250px);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 10px 40px 0 40px;
-    background-color: var(--color4);
 }
 
 .header-container div {
@@ -168,7 +172,7 @@ nav a:hover, nav a svg:hover {
 }
 
 .header-container:nth-child(2) button:hover {
-    background-color: var(--color3);
+    background-color: var(--color4);
     color: var(--color1);
     cursor: pointer;
 }
@@ -222,6 +226,14 @@ nav a:hover, nav a svg:hover {
     margin-top: auto;
     padding-top: 30px;
     justify-content: right;
+}
+
+.project svg {
+    fill: var(--color1);
+}
+
+.project svg:hover {
+    fill: var(--color2);
 }
 
 .additional-container {
