--- a/Index.css
+++ b/Index.css
@@ -34,17 +34,6 @@ li {
     list-style: none;
 }
 
-svg {
-    width: 20px;
-    height: 20px;
-    display: block;
-    fill: var(--color5);
-}
-
-svg:hover {
-    fill: var(--color4);
-}
-
 nav {
     position: fixed;
     top: 0;
@@ -80,6 +69,13 @@ nav > div:first-child a{
 
 nav a span {
     margin-right: 10px;
+}
+
+nav a svg {
+    width: 20px;
+    height: 20px;
+    display: block;
+    fill: var(--color5);
 }
 
 nav a:hover, nav a svg:hover {
@@ -119,6 +115,9 @@ nav a:hover, nav a svg:hover {
 }
 
 .header-container svg {
+    width: 20px;
+    height: 20px;
+    display: block;
     fill: var(--color1);
 }
 
@@ -137,44 +136,65 @@ nav a:hover, nav a svg:hover {
     font-family: var(--font1);
 }
 
-.header-container input:focus {
-    border: 0;
-
-}
-
 .header-container:first-child img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     display: block;
     border-radius: 50%;
+}
+
+.header-container:first-child li:last-child {
+    color: var(--color1);
+    font-size: 12pt;
+    font-weight: 600;
 }
 
 .header-container:nth-child(2) img {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     display: block;
     border-radius: 50%;
 }
 
-.header-container:nth-child(2) a {
+.header-container:nth-child(2) ul {
+    margin-left: 20px;
+    display: block;
+    align-content: center;
+}
+
+.header-container:nth-child(2) li:first-child {
     color: var(--color1);
+    font-size: 10px;
+    font-weight: 600;
+}
+
+.header-container:nth-child(2) li:nth-child(2) {
+    color: var(--color1);
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.header-container:nth-child(2) div:nth-child(2) ul {
+    display: flex;
+    gap: 20px;
 }
 
 .header-container:nth-child(2) button {
     width: 100px;
     padding: 8px 13px;
-    background-color: var(--color2);
     border: none;
     border-radius: 50px;
-    color: var(--color4);
     font-family: var(--font1);
+    color: var(--color5);
+    background-color: var(--color2);
+    font-weight: 600;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .header-container:nth-child(2) button:hover {
-    background-color: var(--color4);
-    color: var(--color1);
     cursor: pointer;
+    background-color: var(--color4);
+    color: var(--color2);
 }
 
 .main-container {
@@ -227,11 +247,14 @@ nav a:hover, nav a svg:hover {
     justify-content: right;
 }
 
-.project svg {
+.project-cta svg {
+    width: 20px;
+    height: 20px;
     fill: var(--color1);
 }
 
-.project svg:hover {
+.project-cta svg:hover {
+    cursor: pointer;
     fill: var(--color2);
 }
 
@@ -243,6 +266,15 @@ nav a:hover, nav a svg:hover {
 
 .additional-container > div h2 {
     margin-bottom: 10px;
+    
+}
+
+.additional-container h3 {
+    font-size: 9pt;
+}
+
+.additional-container p {
+    font-size: 8pt;
 }
 
 
@@ -255,7 +287,7 @@ nav a:hover, nav a svg:hover {
 }
 
 .announcement:not(:last-child) {
-    border-bottom: 1px  solid var(--color3);
+    border-bottom: 1px  solid var(--color1);
     padding-bottom: 15px;
 }
 
@@ -285,6 +317,15 @@ nav a:hover, nav a svg:hover {
     height: 30px;
     display: block;
     border-radius: 50%;
+}
+
+.trending p {
+    font-size: 8pt;
+    line-height: 1.3;
+}
+
+.trending .username-tag {
+    font-weight: 600;
 }
 
 
