--- a/Index.css
+++ b/Index.css
@@ -7,6 +7,7 @@
     --font4: 'Tangerine', cursive;
     --color1: #111827;
     --color2: #0284c7; 
+    --color3: #fdba74;
     --color4: #e5e7eb;
     --color5: #fff;
 }
@@ -233,6 +234,7 @@ nav a:hover, nav a svg:hover {
 }
 
 .project {
+    border-left: 10px solid var(--color3);
     background-color: var(--color5);
     padding: 20px;
     border-radius: 10px;
